feat: add group child-track drum clips and channel-aware fine nudging